--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
     </div>
     <div class="flex-container">
         <div class="box1">
-
+            <p> Hola </p>
         </div>
         <div class="flex-container-submenu">
             <div class="box2">
