--- a/homepage.html
+++ b/homepage.html
@@ -16,6 +16,13 @@
     <div class="flex-container">
         <div class="box1">
             <p> Hola </p>
+            <div class="opciones">
+                <ul>
+                    <li>Opcion A</li>
+                    <li>Opcion B</li>
+                    <li>Opcion C</li>
+                </ul>
+            </div>
         </div>
         <div class="flex-container-submenu">
             <div class="box2">
