--- a/homepage.html
+++ b/homepage.html
@@ -16,8 +16,8 @@
     <div class="flex-container">
         <div class="box1">
             <p> Hola </p>
-            <div class="opciones">
-                <ul>
+            <div class="options-container">
+                <ul class="options">
                     <li>Opcion A</li>
                     <li>Opcion B</li>
                     <li>Opcion C</li>
