--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./index.css">
         <link rel="stylesheet" href="./onexit.css">
         <script src="./onexit.js"></script>
-        <title>First Screen</title>
+        <title>Life.</title>
     </header>
     <body>
         <div id="idExitOverlay" class="ExitOverlay"></div>
