--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./login.css">
     <link rel="stylesheet" href="./onload.css">
     <link rel="stylesheet" href="./onexit.css">
-    <title>Document</title>
+    <title>Life.</title>
 </head>
 <body>
     <div id="idOverlay" class="overlay"></div>
